# orbtsl-ai

./: README.md  about.py  login.py  main.py  pyproject.toml  requirements.txt  test.ipynb
chat/: agensql.py  chatbot.py  chatbot_agent.ipynb  chatmodel_v1.py
chat/utils/: chat_memory.py  check_query_prompt.py  example_store.py  examples.py  langgraph_chain.py  oracle_connector.py  prompt_utils.py  schema_store.py
control/: auth.py  db.py  rebuild_vector.py
data/: examples.json
data/example_store.faiss/: index.faiss  index.pkl
data/schema_store.faiss/: index.faiss  index.pkl
graph/: pickuploc_1.py
inference/: revenue_1.py  revenue_2.py
settings/: auth.py  db.py
