[project]
name = "orbtsl-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cx-oracle>=8.3.0",
    "duckduckgo-search>=8.0.5",
    "faiss-cpu>=1.11.0.post1",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.0",
    "oracledb>=3.2.0",
    "pandas>=2.3.0",
    "pandasai>=2.0.24",
    "regex>=2024.11.6",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
